# hydrone_underwater_gazebo

./: README.md
hydrone_underwater_control/: CMakeLists.txt  package.xml
hydrone_underwater_control/config/: model_params.yaml  model_params_exact.yaml  thruster_manager.yaml
hydrone_underwater_control/launch/: record_demo.launch  start_pid_controller.launch
hydrone_underwater_control/rviz/: hydrone_underwater_control.rviz
hydrone_underwater_description/: CMakeLists.txt  package.xml
hydrone_underwater_description/launch/: upload_hydrone_underwater.launch
hydrone_underwater_description/robots/: hydrone_underwater_default.xacro
hydrone_underwater_description/urdf/: hydrone.xacro  hydrone_base.xacro  hydrone_underwater.gazebo.xacro  hydrone_underwater_base.xacro  mav_generic_odometry_sensor.gazebo
hydrone_underwater_gazebo/: CMakeLists.txt  package.xml
hydrone_underwater_gazebo/launch/: hydrone_mav.launch  record.launch  spawn_mav.launch  start_demo_pid_controller.launch
